*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/x10/code@4541 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime.cws/paper/IPDPS08/parallel.bib
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/parallel.bib
@@ -10671,3 +10671,10 @@
     volume  = {5}
 }
 
+@inproceedings{ frigo98implementation,
+    author = "Matteo Frigo and Charles E. Leiserson and Keith H. Randall",
+    title = "The Implementation of the Cilk-5 Multithreaded Language",
+    booktitle = "{SIGPLAN} Conference on Programming Language Design and Implementation",
+    pages = "212-223",
+    year = "1998",
+    url = "citeseer.ist.psu.edu/frigo98implementation.html" }
