--- a/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
@@ -20,7 +20,7 @@
 \numberwithin{equation}{section}
 
 %\newenvironment{javaen}{\begin{small}\begin{verbatim}}{\end{verbatim}\end{small}}
-\newcommand{\java}{\scriptsize\tt}
+\newcommand{\java}{\tt}
 \def\Xten{{\sf X10}}
 \def\XWS{{\sf XWS}}
 
