*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/x10/code@4548 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime.cws/paper/IPDPS08/conclusion.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/conclusion.tex
@@ -12,4 +12,6 @@ implemented with pseudo-depth-first search (DFS), breadth-first search
 show that the \XWS{} programs scale and exhibit performance comparable
 with hand-written C programs.
 
-\paragraph{Acknowledgements.} \XWS{} is being designed and implemented in collabration with Doug Lea. We thank Raj Barik for his contributions to the implementation of the C++ version of \XWS. We thank the rest of the \Xten{} team for many discussions of these issues.
+\paragraph{Acknowledgements.} \XWS{} is being designed and implemented in collabration with Doug Lea. We thank Raj Barik for his contributions to the implementation of the C++ version of \XWS. We thank the rest of the \Xten{} team for many discussions of these issues. This material is based upon work supported by the Defense
+Advanced Research Projects Agency under its Agreement No.
+HR0011-07-9-0002.
