--- a/x10.runtime.cws/paper/IPDPS08/perf-eval.tex
+++ b/x10.runtime.cws/paper/IPDPS08/perf-eval.tex
@@ -5,14 +5,20 @@ The performance numbers for handwritten C application and for the
 breadth-first search and the Shiloach Vishkin algorithm for spanning
 tree (from top to bottom). Numbers are presented for two machines,
 altair (containing 4 dual-core Opterons) on the left and moxie, a
-32-processor Niagara on the right. 
+32-processor Niagara on the right. The best numbers for ten
+consecutive runs are presented.
+
+The Java programs were run using the experimental Java 1.7 release on
+both machines. C programs were compiled with Sun cc v 5.8 and Cilk
+programs with the 5.3.2 compiler.
 
 The graphs show good scaling for the \XWS{} version of applications on
 both machines. In all cases the numbers for \XWS{} are better than
 that for the C code at higher processor counts.
 
-Cilk does not perform well for BFS. (We were unable to
-get a Cilk version of SV running in time for the submission.)
+Cilk does not perform well for BFS. (We were unable to get a Cilk
+version of SV running in time for the submission.) 
+
 
 \begin{figure}
  \begin{tabular}{ccc}
