--- a/trunk/x10.lib/doc/design/newdoc/header.tex
+++ b/trunk/x10.lib/doc/design/newdoc/header.tex
@@ -78,34 +78,7 @@ This document presents a snapshot of the high-level design of
 {\tt x10.sf.net}.
 \end{abstract}
 
-\section{Introduction}
-\input {introduction}
-
-
-\section{Design overview}
-\input{design-overview-gas}
-\input {deploy}
-\input {design-overview-atomics}
-\input {design-overview-sharedarrays}
-%\input {design-overview-intrinsics}
-\input {design-overview-execenv}
-
-\section{Conclusion}
-\input{conclusion}
-%\section{Future Directions}
-%\input{future}
-
-%\section{Hello World Example}
-%\input{helloworld}
-\appendix
-\section{Background}
-\input {background-x10}
-\input {background-mpi}
-\input {background-lapi}
-\input {background-armci}
-\input {background-gasnet}
-\input{x10-compiler-writer-notes}
-
+\input{text/introduction}
 
 \bibliographystyle{plain}
 \bibliography{x10}
