--- a/trunk/x10.lib/doc/design/newdoc/text/introduction.tex
+++ b/trunk/x10.lib/doc/design/newdoc/text/introduction.tex
@@ -1,3 +1,4 @@
+\section{Introduction}
 \subsection{Design Goals}
 \Xtenlib{} is a runtime system for \Xten{}~\cite{x10}. 
 We list the following explicit design goals for \Xtenlib:
