--- a/x10.lib/doc/design/newdoc/header.tex
+++ b/x10.lib/doc/design/newdoc/header.tex
@@ -10,8 +10,8 @@
 %Header information LE stands for Left Even page, Ro for Right Odd
 %page, LO stands for Left Odd page and RE stands for Right Even page
 \fancyhead{}
-\fancyhead[LO,RE]{\includegraphics[scale=0.7]{phase3logo}}
-\fancyhead[LE,RO]{\includegraphics[scale=0.7]{IBMLogo}}
+\fancyhead[LO,RE]{\includegraphics[scale=0.7]{figs/phase3logo}}
+\fancyhead[LE,RO]{\includegraphics[scale=0.7]{figs/IBMLogo}}
 
 %footer is put in center
 \fancyfoot{}
@@ -49,11 +49,15 @@
 
 \begin{document}
 \title{High-level Design Document: The \Xtenlib{} Design v0.91}
-\author{Vijay Saraswat, IBM TJ Watson Research Center \\
-  Sriram Krishnamoorthy, The Ohio State University \\
-  Ganesh Bikshandi, IBM India Software Lab \\
-  Rajkishore Barik, IBM India Research Lab \\
-  Sayantan Sur, IBM TJ Watson Research Center}
+\author{Ganesh Bikshandi, IBM India Software Lab\\
+Sreedhar Kodali, IBM India Software Lab\\
+Sriram Krishnamoorthy, The Ohio State University\\
+Vijay Saraswat, IBM T. J. Watson Research Center\\
+Sayantan Sur, IBM T. J. Watson Research Center}
+
+%  Ganesh Bikshandi, IBM India Software Lab \\
+%  Rajkishore Barik, IBM India Research Lab \\
+%  Sayantan Sur, IBM TJ Watson Research Center}
 
 \maketitle
 
@@ -63,25 +67,11 @@
 % Setup the PDF document info fields
 %\hypersetup{pdftitle=\theTitle,pdfauthor=\theAuthor,pdfkeywords={}, pdfsubject={},pdfcreator={},pdfproducer={}}
 
-\begin{abstract}
-{}\Xtenlib{} is a runtime system for \Xten{}, designed for
-tightly-coupled clusters of multiprocessors. It supports a partitioned
-global address space, multiple places, global datastructures (arrays),
-and dynamically spawned activities and synchronization operations
-between these activities. The library is intended for use by the
-\Xten{} compiler as a runtime library, and also by programmers in
-C/C++ wishing to write code in the \Xten{} style.
-
-This document presents a snapshot of the high-level design of
-\Xtenlib{}. A companion note will document the actual APIs exported by
-\Xtenlib. This document will be kept uptodate on the \Xten{} website,
-{\tt x10.sf.net}.
-\end{abstract}
-
+\input{text/abstract}
 \input{text/introduction}
 
 \bibliographystyle{plain}
-\bibliography{x10}
+\bibliography{bib/x10}
 
 \end{document}
 
