--- a/x10.lib/doc/design/newdoc/header.tex
+++ b/x10.lib/doc/design/newdoc/header.tex
@@ -11,7 +11,7 @@
 %page, LO stands for Left Odd page and RE stands for Right Even page
 \fancyhead{}
 \fancyhead[LO,RE]{\includegraphics[scale=0.7]{figs/phase3logo}}
-\fancyhead[LE,RO]{\includegraphics[scale=0.7]{figs/IBMLogo}}
+\fancyhead[LE,RO]{\includegraphics[scale=0.2]{figs/IBMLogo1}}
 
 %footer is put in center
 \fancyfoot{}
@@ -48,16 +48,12 @@
 \def\Xtenlib{{\sf X10lib}}
 
 \begin{document}
-\title{High-level Design Document: The \Xtenlib{} Design v0.91}
-\author{Ganesh Bikshandi, IBM India Software Lab\\
-Sreedhar Kodali, IBM India Software Lab\\
+\title{\Xtenlib{} Design Document \\ v1.0}
+\author{Ganesh Bikshandi, IBM Systems \& Technology Group\\
+Sreedhar Kodali, IBM Systems \& Technology Group\\
 Sriram Krishnamoorthy, The Ohio State University\\
 Vijay Saraswat, IBM T. J. Watson Research Center\\
 Sayantan Sur, IBM T. J. Watson Research Center}
-
-%  Ganesh Bikshandi, IBM India Software Lab \\
-%  Rajkishore Barik, IBM India Research Lab \\
-%  Sayantan Sur, IBM TJ Watson Research Center}
 
 \maketitle
 
