--- a/x10.lib/doc/design/newdoc/header.tex
+++ b/x10.lib/doc/design/newdoc/header.tex
@@ -65,6 +65,7 @@ Sayantan Sur, IBM T. J. Watson Research Center}
 
 \input{text/abstract}
 \input{text/introduction}
+\input{text/design}
 
 \bibliographystyle{plain}
 \bibliography{bib/x10}
