--- a/x10.lib/doc/design/newdoc/bib/x10.bib
+++ b/x10.lib/doc/design/newdoc/bib/x10.bib
@@ -1482,3 +1482,23 @@ note = {To appear in Electronic Notes in Theoretical Computer Science}
 	title = "{Overview of LAPI}",
 	howpublished = "{www.redbooks.ibm.com/redbooks/pdfs/sg242080.pdf}" 
 }
+
+@inproceedings{X10,
+	author = "{P. Charles and C. Grothoff and V. Saraswat and C. Donawa and A. Kielstra and K. Ebcioglu and C. von Praun and V.  Sarkar}",
+	title = "{{X10}: {An} Object Oriented Approach to Non-Uniform Cluster Computing}",
+	booktitle = "{Proceedings of the 20th annual {ACM} SIGPLAN conference on Object Oriented programming, 
+		systems, languages, and applications ({OOPSLA}'2005), New York, USA}",
+	publisher = "ACM Press, New York (NY), USA",
+	pages = "519--538",
+	year = "2005"
+}
+
+@article{ARMCI,
+    author = "{J. Nieplocha and V. Tipparaju and M. Krishnan and D. K. Panda}",
+    title = "{High Performance Remote Memory Access Communication: The {ARMCI} Approach}",
+    journal = {International Journal of High Performance Computing Applications},
+    volume = {20},
+    number = {2},
+    pages = {233-253},
+    year = {2006}
+}
