--- a/trunk/x10.lib/doc/design/v1.0/text/design-array.tex
+++ b/trunk/x10.lib/doc/design/v1.0/text/design-array.tex
@@ -33,7 +33,7 @@ we plan to allocate each of these arrays differently.
 \subsubsection{Regular Arrays}
 \begin{figure}
 \center
-%\includegraphics[scale=0.5]{ARRAY-REGULAR}
+\includegraphics[scale=0.5]{figs/ARRAY-REGULAR.pdf}
 \caption{A sample layout of a {\em regular} distributed array}
 \label{fig:array_layout_regular}
 \end{figure}
@@ -73,7 +73,7 @@ at the receiving end.
 
 \begin{figure}
 \center
-%\includegraphics[scale=0.5]{ARRAY-SEMI}
+\includegraphics[scale=0.5]{figs/ARRAY-SEMI.pdf}
 \caption{A sample layout of a {\em semi-regular} distributed array}
 \label{fig:array_layout_semiregular}
 \end{figure}
@@ -103,7 +103,7 @@ in each process.
 
 \begin{figure}
 \center
-%\includegraphics[scale=0.5]{ARRAY-IRREGULAR}
+\includegraphics[scale=0.5]{figs/ARRAY-IRREGULAR.pdf}
 \caption{A sample layout of an {\em irregular} distributed array}
 \label{fig:array_layout_irregular}
 \end{figure}
