--- a/trunk/x10.lib/doc/design/v1.0/text/design-gas.tex
+++ b/trunk/x10.lib/doc/design/v1.0/text/design-gas.tex
@@ -14,8 +14,7 @@ processes, scattered on multiple SMPs. The LAS is divided in two regions
 
 \begin{figure}
 \center
-%\includegraphics[width=\linewidth]{design-A}
-%\includegraphics[scale=0.5]{GAS}
+\includegraphics[scale=0.5]{figs/gas.pdf}
 \caption{\Xten{} The address space of an \Xtenlib{} process}
 \label{fig:as_layout}
 \end{figure}
